Reduced spacing on back and forth buttons. Updated Transaction page to be a fixed width.

--- a/budgeter.client/src/App.css
+++ b/budgeter.client/src/App.css
@@ -77,7 +77,7 @@ button {
 }
 
 .back-forward-button {
-    padding: 4px 8px;
+    padding: 4px;
     background-color: transparent;
     border: none
 }
