--- a/budgeter.client/src/StyleSheets/DailyTransactionListView.css
+++ b/budgeter.client/src/StyleSheets/DailyTransactionListView.css
@@ -4,6 +4,7 @@
   padding: 0 4px;
   box-sizing: border-box;
   margin: 0;
+  width: 608px;
 }
 
 .transactions-container {
